~~~~~~~~~~~~~~~~
version 3.8.1
~~~~~~~~~~~~~~~~

* changed 32/64 bit detection method to [environment]::Is64BitOperatingSystem -eq 'True'
* mangled true word to split it up

~~~~~~~~~~~~~~~~
version 3.8
~~~~~~~~~~~~~~~~

* randomize noexit
* fix a python3 decode issue when generating meterpreter shellcode
* fix raw_input python 3 compatibility
* fix lambda error with python3 and decode format
* added a check for x64 bit shellcode and automatically downgrade payload for meterpreter

~~~~~~~~~~~~~~~~
version 3.7.6
~~~~~~~~~~~~~~~~

* randomize downgrade code for evasion

~~~~~~~~~~~~~~~~
3.7.5
~~~~~~~~~~~~~~~~

* randomize IEX command

~~~~~~~~~~~~~~~~
version 3.7.4
~~~~~~~~~~~~~~~~

* add randomization on byte replacing

~~~~~~~~~~~~~~~~
version 3.7.3
~~~~~~~~~~~~~~~~

* remove stage encoding and configure meterpreter listener options for better evasion

~~~~~~~~~~~~~~~~
version 3.7.2
~~~~~~~~~~~~~~~~

* fix macro injection escaping
* when using smallest payload, it gets flagged - removing smallest option flag for meterpreter since we don't need it anymore due to code optimization

~~~~~~~~~~~~~~~~
version 3.7.1
~~~~~~~~~~~~~~~~

* add Windows 7 support for Unicorn payload

~~~~~~~~~~~~~~~~
version 3.7
~~~~~~~~~~~~~~~~

* remove variable name as random string insertion for av avoidance
* add encoding and automatic stage loading in meterpreter (will flag AV) - looks to be time-gated, just load stdapi once meterpreter loaded
* added better evasion around sv and gv

~~~~~~~~~~~~~~~~
version 3.6.11
~~~~~~~~~~~~~~~~

* more evasion on add-type

~~~~~~~~~~~~~~~~
version 3.6.10
~~~~~~~~~~~~~~~~

* shorten up payload and av evasion

~~~~~~~~~~~~~~~~
version 3.6.9
~~~~~~~~~~~~~~~~

* move -pass to a different location

~~~~~~~~~~~~~~~~
3.6.8
~~~~~~~~~~~~~~~~

* mangle more CreateThread upon execution

~~~~~~~~~~~~~~~~
version 3.6.7
~~~~~~~~~~~~~~~~

* mangle word for WIn32Functions

~~~~~~~~~~~~~~~~
version 3.6.6
~~~~~~~~~~~~~~~~
